--- a/index.html
+++ b/index.html
@@ -5,8 +5,11 @@
         <link rel="stylesheet" href="index.css">
     </head>
     <body>
-        <input type="text" id="input-field" placeholder="Bread">
-        <button id="add-button">Add to cart</button>
+        <div class = "container">
+            <img src="assets/cat.png">
+            <input type="text" id="input-field" placeholder="Bread">
+            <button id="add-button">Add to cart</button>
+        </div>
         <script src="index.js"></script>
     </body>
 </html>
