--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!doctype html>
 <html>
-    <head><link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.css">
+    <head>
         <title>Add to Cart</title>
         <link rel="stylesheet" href="index.css">
     </head>
@@ -10,6 +10,6 @@
             <input type="text" id="input-field" placeholder="Bread">
             <button id="add-button">Add to cart</button>
         </div>
-        <script src="index.js"></script>
+        <script src="index.js" type = "module"></script>
     </body>
 </html>
