--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
             <img src="assets/cat.png">
             <input type="text" id="input-field" placeholder="Bread">
             <button id="add-button">Add to cart</button>
+            <ul id="shopping-list"></ul>
         </div>
         <script src="index.js" type = "module"></script>
     </body>
