--- a/index.html
+++ b/index.html
@@ -8,15 +8,15 @@
         <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
         <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
         <link rel="manifest" href="/site.webmanifest">
-        <title>Add to Cart</title>
+        <title>Add to Tasks</title>
         <link rel="stylesheet" href="index.css">
     </head>
     <body>
         <div class = "container">
-            <img src="assets/cat.png">
-            <input type="text" id="input-field" placeholder="Bread">
-            <button id="add-button">Add to cart</button>
-            <ul id="shopping-list"></ul>
+            <img src="assets/cat-cleaning.jpeg">
+            <input type="text" id="input-field" placeholder="Tasks to do">
+            <button id="add-button">Add to tasks</button>
+            <ul id="task-list"></ul>
         </div>
         <script src="index.js" type = "module"></script>
     </body>
