Add new colors and an icon to the important task button Star icon can now be pressed to make a task important. Important tasks will be pink and turn back to white if the star icon is pressed again. Button hover style was removed and text was also made white on important tasks for better visibility.

--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
         <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
         <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
         <link rel="manifest" href="/site.webmanifest">
+        <link rel="stylesheet" href="assets/css/fontawesome.css">
+        <link rel="stylesheet" href="assets/css/solid.css">
         <title>Add to Tasks</title>
         <link rel="stylesheet" href="index.css">
     </head>
@@ -17,6 +19,7 @@
             <img src="assets/cat-cleaning.jpeg">
             <input type="text" id="input-field" placeholder="Tasks to do">
             <button id="add-button">Add to tasks</button>
+            <i class="fa-solid fa-star"></i>
             <ul id="task-list"></ul>
         </div>
         <script src="index.js" type = "module"></script>
